added entropy analysis

--- a/experiments/workshop_experiments/analyses/entropy_analysis/analysis.ipynb
+++ b/experiments/workshop_experiments/analyses/entropy_analysis/analysis.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,9 +24,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -34,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {
     "scrolled": true
    },
@@ -61,8 +70,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "04/03/2020 08:22:50 - INFO - pytorch_pretrained_bert.tokenization -   loading vocabulary file https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-uncased-vocab.txt from cache at ./cache/26bc1ad6c0ac742e9b52263248f6d0f00068293b33709fae12320c0e35ccfbbb.542ce4285a40d23a559526243235df47c5f75c197f04f37d1a0c124c32c9a084\n",
-      "386it [00:00, 4921.61it/s]\n"
+      "04/03/2020 18:07:04 - INFO - pytorch_pretrained_bert.tokenization -   loading vocabulary file https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-uncased-vocab.txt from cache at ./cache/26bc1ad6c0ac742e9b52263248f6d0f00068293b33709fae12320c0e35ccfbbb.542ce4285a40d23a559526243235df47c5f75c197f04f37d1a0c124c32c9a084\n",
+      "386it [00:00, 4812.40it/s]\n"
      ]
     }
    ],
@@ -88,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {
     "scrolled": true
    },
@@ -97,10 +106,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "04/03/2020 08:24:27 - INFO - pytorch_pretrained_bert.tokenization -   loading vocabulary file https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-uncased-vocab.txt from cache at ./cache/26bc1ad6c0ac742e9b52263248f6d0f00068293b33709fae12320c0e35ccfbbb.542ce4285a40d23a559526243235df47c5f75c197f04f37d1a0c124c32c9a084\n",
-      "04/03/2020 08:24:27 - INFO - pytorch_pretrained_bert.modeling -   loading archive file https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-uncased.tar.gz from cache at ./cache/9c41111e2de84547a463fd39217199738d1e3deb72d4fec4399e6e241983c6f0.ae3cef932725ca7a30cdcb93fc6e09150a55e2a130ec7af63975a16c153ae2ba\n",
-      "04/03/2020 08:24:27 - INFO - pytorch_pretrained_bert.modeling -   extracting archive file ./cache/9c41111e2de84547a463fd39217199738d1e3deb72d4fec4399e6e241983c6f0.ae3cef932725ca7a30cdcb93fc6e09150a55e2a130ec7af63975a16c153ae2ba to temp dir /tmp/tmptyj0on6w\n",
-      "04/03/2020 08:24:31 - INFO - pytorch_pretrained_bert.modeling -   Model config {\n",
+      "04/03/2020 18:07:04 - INFO - pytorch_pretrained_bert.tokenization -   loading vocabulary file https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-uncased-vocab.txt from cache at ./cache/26bc1ad6c0ac742e9b52263248f6d0f00068293b33709fae12320c0e35ccfbbb.542ce4285a40d23a559526243235df47c5f75c197f04f37d1a0c124c32c9a084\n",
+      "04/03/2020 18:07:05 - INFO - pytorch_pretrained_bert.modeling -   loading archive file https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-uncased.tar.gz from cache at ./cache/9c41111e2de84547a463fd39217199738d1e3deb72d4fec4399e6e241983c6f0.ae3cef932725ca7a30cdcb93fc6e09150a55e2a130ec7af63975a16c153ae2ba\n",
+      "04/03/2020 18:07:05 - INFO - pytorch_pretrained_bert.modeling -   extracting archive file ./cache/9c41111e2de84547a463fd39217199738d1e3deb72d4fec4399e6e241983c6f0.ae3cef932725ca7a30cdcb93fc6e09150a55e2a130ec7af63975a16c153ae2ba to temp dir /tmp/tmpjtow6906\n",
+      "04/03/2020 18:07:08 - INFO - pytorch_pretrained_bert.modeling -   Model config {\n",
       "  \"attention_probs_dropout_prob\": 0.1,\n",
       "  \"hidden_act\": \"gelu\",\n",
       "  \"hidden_dropout_prob\": 0.1,\n",
@@ -114,13 +123,11 @@
       "  \"vocab_size\": 30522\n",
       "}\n",
       "\n",
-      "04/03/2020 08:24:38 - INFO - pytorch_pretrained_bert.modeling -   Weights of BertForMultitaskWithFeaturesOnTop not initialized from pretrained model: ['tok_classifier.out.0.weight', 'tok_classifier.out.0.bias', 'tok_classifier.enricher.0.weight', 'tok_classifier.enricher.0.bias', 'cls_classifier.weight', 'cls_classifier.bias']\n",
-      "04/03/2020 08:24:38 - INFO - pytorch_pretrained_bert.modeling -   Weights from pretrained model not used in BertForMultitaskWithFeaturesOnTop: ['cls.predictions.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.gamma', 'cls.predictions.transform.LayerNorm.beta', 'cls.predictions.decoder.weight', 'cls.seq_relationship.weight', 'cls.seq_relationship.bias']\n",
-      "/u/nlp/anaconda/main/anaconda3/envs/bias_classification/lib/python3.6/site-packages/torch/nn/modules/rnn.py:54: UserWarning: dropout option adds dropout after all but last recurrent layer, so non-zero dropout expects num_layers greater than 1, but got dropout=0.2 and num_layers=1\n",
-      "  \"num_layers={}\".format(dropout, num_layers))\n",
-      "04/03/2020 08:24:39 - INFO - pytorch_pretrained_bert.modeling -   loading archive file https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-uncased.tar.gz from cache at ./cache/9c41111e2de84547a463fd39217199738d1e3deb72d4fec4399e6e241983c6f0.ae3cef932725ca7a30cdcb93fc6e09150a55e2a130ec7af63975a16c153ae2ba\n",
-      "04/03/2020 08:24:39 - INFO - pytorch_pretrained_bert.modeling -   extracting archive file ./cache/9c41111e2de84547a463fd39217199738d1e3deb72d4fec4399e6e241983c6f0.ae3cef932725ca7a30cdcb93fc6e09150a55e2a130ec7af63975a16c153ae2ba to temp dir /tmp/tmpd8mbpdso\n",
-      "04/03/2020 08:24:43 - INFO - pytorch_pretrained_bert.modeling -   Model config {\n",
+      "04/03/2020 18:07:11 - INFO - pytorch_pretrained_bert.modeling -   Weights of BertForMultitaskWithFeaturesOnTop not initialized from pretrained model: ['tok_classifier.out.0.weight', 'tok_classifier.out.0.bias', 'tok_classifier.enricher.0.weight', 'tok_classifier.enricher.0.bias', 'cls_classifier.weight', 'cls_classifier.bias']\n",
+      "04/03/2020 18:07:11 - INFO - pytorch_pretrained_bert.modeling -   Weights from pretrained model not used in BertForMultitaskWithFeaturesOnTop: ['cls.predictions.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.gamma', 'cls.predictions.transform.LayerNorm.beta', 'cls.predictions.decoder.weight', 'cls.seq_relationship.weight', 'cls.seq_relationship.bias']\n",
+      "04/03/2020 18:07:13 - INFO - pytorch_pretrained_bert.modeling -   loading archive file https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-uncased.tar.gz from cache at ./cache/9c41111e2de84547a463fd39217199738d1e3deb72d4fec4399e6e241983c6f0.ae3cef932725ca7a30cdcb93fc6e09150a55e2a130ec7af63975a16c153ae2ba\n",
+      "04/03/2020 18:07:13 - INFO - pytorch_pretrained_bert.modeling -   extracting archive file ./cache/9c41111e2de84547a463fd39217199738d1e3deb72d4fec4399e6e241983c6f0.ae3cef932725ca7a30cdcb93fc6e09150a55e2a130ec7af63975a16c153ae2ba to temp dir /tmp/tmpbaots_ew\n",
+      "04/03/2020 18:07:16 - INFO - pytorch_pretrained_bert.modeling -   Model config {\n",
       "  \"attention_probs_dropout_prob\": 0.1,\n",
       "  \"hidden_act\": \"gelu\",\n",
       "  \"hidden_dropout_prob\": 0.1,\n",
@@ -161,13 +168,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "95c652bc44fb4a31bf14bee9ae14a11c",
+       "model_id": "f12279b1eaa54d359382cf0fe16ef2e4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -192,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +208,7 @@
        "Length: 324 Keys: dict_keys(['pre_ids', 'masks', 'pre_lens', 'post_in_ids', 'post_out_ids', 'pre_tok_label_ids', 'post_tok_label_ids', 'rel_ids', 'pos_ids', 'categories', 'index', 'bias_label'])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,17 +277,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for key, attention_dist in attention_dist_dict.items():\n",
-    "    windowed_dist = window_attention_dist(attention_dist, bias_indices, window_size=7)\n",
-    "    attention_dist_0 = windowed_dist[labels_0_indices].squeeze() # epistemological \n",
-    "    attention_dist_1 = windowed_dist[labels_1_indices].squeeze() # framing \n",
-    "    \n",
-    "    # Calculate entropy of distributions "
+    "from scipy.stats import entropy\n",
+    "from src.utils.attention_utils import window_attention_dist"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Layer 0: Entropy Epistemological: 2.9699798211578496 \t Entropy Framing 3.010976932906165\n",
+      "Layer 1: Entropy Epistemological: 2.6974301091895616 \t Entropy Framing 2.7149727156596817\n",
+      "Layer 2: Entropy Epistemological: 2.5900012077378833 \t Entropy Framing 2.6097387750747756\n",
+      "Layer 3: Entropy Epistemological: 2.6268901026938574 \t Entropy Framing 2.633833535492714\n",
+      "Layer 4: Entropy Epistemological: 2.8849388735353454 \t Entropy Framing 2.9235627281254737\n",
+      "Layer 5: Entropy Epistemological: 2.6848199732047466 \t Entropy Framing 2.7148549627200724\n",
+      "Layer 6: Entropy Epistemological: 2.6063626413502967 \t Entropy Framing 2.6157466684068953\n",
+      "Layer 7: Entropy Epistemological: 2.482777354145838 \t Entropy Framing 2.5211734624919044\n",
+      "Layer 8: Entropy Epistemological: 2.778633512741278 \t Entropy Framing 2.791751378862729\n",
+      "Layer 9: Entropy Epistemological: 2.872147674402915 \t Entropy Framing 2.9267627881665534\n",
+      "Layer 10: Entropy Epistemological: 2.4515067713319763 \t Entropy Framing 2.3189149431407157\n",
+      "Layer 11: Entropy Epistemological: 2.7270900365734887 \t Entropy Framing 2.6600159365555336\n",
+      "\n",
+      "\n",
+      "Average Entropy Over All Epistemological: 2.6977148398387527\n",
+      "Average Entropy Over All Framing: 2.7035254023002673\n"
+     ]
+    }
+   ],
+   "source": [
+    "avg_entropies_0 = []\n",
+    "avg_entropies_1 = []\n",
+    "for key, attention_dist in attention_dist_dict.items():\n",
+    "    attention_dist_0 = attention_dist[labels_0_indices].squeeze() # epistemological \n",
+    "    attention_dist_1 = attention_dist[labels_1_indices].squeeze() # framing\n",
+    "    entropy_0 = entropy(attention_dist_0.t())\n",
+    "    entropy_1 = entropy(attention_dist_1.t())\n",
+    "    avg_entropy_0 = sum(entropy_0)/len(entropy_0)\n",
+    "    avg_entropy_1 = sum(entropy_1)/len(entropy_1)\n",
+    "    print(\"Layer {}: Entropy Epistemological: {} \\t Entropy Framing {}\".format(key, avg_entropy_0, avg_entropy_1))\n",
+    "    avg_entropies_0.append(avg_entropy_0)\n",
+    "    avg_entropies_1.append(avg_entropy_1)\n",
+    "\n",
+    "print(\"\\n\")\n",
+    "print(\"Average Entropy Over All Epistemological: {}\".format(sum(avg_entropies_0)/len(avg_entropies_0)))\n",
+    "print(\"Average Entropy Over All Framing: {}\".format(sum(avg_entropies_1)/len(avg_entropies_1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Layer 0: Entropy Epistemological: 2.104026387545688 \t Entropy Framing 2.127955666903792\n",
+      "Layer 1: Entropy Epistemological: 1.990709040775772 \t Entropy Framing 1.9842406053261217\n",
+      "Layer 2: Entropy Epistemological: 1.9090724055432091 \t Entropy Framing 1.8980930456386997\n",
+      "Layer 3: Entropy Epistemological: 1.9572476823467853 \t Entropy Framing 1.9513696520199328\n",
+      "Layer 4: Entropy Epistemological: 2.029124992938081 \t Entropy Framing 2.050512483260902\n",
+      "Layer 5: Entropy Epistemological: 1.8802496347545592 \t Entropy Framing 1.9070896785247502\n",
+      "Layer 6: Entropy Epistemological: 1.8754660698993146 \t Entropy Framing 1.8614262371814896\n",
+      "Layer 7: Entropy Epistemological: 1.7494005757915088 \t Entropy Framing 1.7689679226851815\n",
+      "Layer 8: Entropy Epistemological: 1.9188331946853763 \t Entropy Framing 1.8532549339562214\n",
+      "Layer 9: Entropy Epistemological: 1.9267516727289877 \t Entropy Framing 1.9557632363488522\n",
+      "Layer 10: Entropy Epistemological: 1.5355080543470776 \t Entropy Framing 1.29558250528251\n",
+      "Layer 11: Entropy Epistemological: 1.709408125601524 \t Entropy Framing 1.473831828004621\n",
+      "\n",
+      "\n",
+      "Average Entropy Over All Epistemological: 1.88214981974649\n",
+      "Average Entropy Over All Framing: 1.8440073162610895\n"
+     ]
+    }
+   ],
+   "source": [
+    "avg_entropies_0 = []\n",
+    "avg_entropies_1 = []\n",
+    "for key, attention_dist in attention_dist_dict.items():\n",
+    "    windowed_attention_dist = window_attention_dist(attention_dist, bias_indices, window_size=5)\n",
+    "    normalized_windowed_attention_dist = windowed_attention_dist / torch.sum(windowed_attention_dist, dim=1, keepdim=True)\n",
+    "    \n",
+    "    attention_dist_0 = normalized_windowed_attention_dist[labels_0_indices].squeeze() # epistemological \n",
+    "    attention_dist_1 = normalized_windowed_attention_dist[labels_1_indices].squeeze() # framing\n",
+    "    entropy_0 = entropy(attention_dist_0.t())\n",
+    "    entropy_1 = entropy(attention_dist_1.t())\n",
+    "    avg_entropy_0 = sum(entropy_0)/len(entropy_0)\n",
+    "    avg_entropy_1 = sum(entropy_1)/len(entropy_1)\n",
+    "    print(\"Layer {}: Entropy Epistemological: {} \\t Entropy Framing {}\".format(key, avg_entropy_0, avg_entropy_1))\n",
+    "    avg_entropies_0.append(avg_entropy_0)\n",
+    "    avg_entropies_1.append(avg_entropy_1)\n",
+    "\n",
+    "print(\"\\n\")\n",
+    "print(\"Average Entropy Over All Epistemological: {}\".format(sum(avg_entropies_0)/len(avg_entropies_0)))\n",
+    "print(\"Average Entropy Over All Framing: {}\".format(sum(avg_entropies_1)/len(avg_entropies_1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
