adding unpretrain experiment with windowing based on acutal bias

--- a/experiments/workshop_experiments/attention_no-pretrain/large_data/concat_all/experiment-linear.ipynb
+++ b/experiments/workshop_experiments/attention_no-pretrain/large_data/concat_all/experiment-linear.ipynb
@@ -485,13 +485,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e2e01fa04e2e435aad515a4d48bcbe64",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
@@ -501,6 +501,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -509,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,9 +534,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'num_examples': 81,\n",
+       "  'accuracy': 0.5925925925925926,\n",
+       "  'auc': 0.48814158285835846},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.5925925925925926,\n",
+       "  'auc': 0.47174614701847817},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.5802469135802468,\n",
+       "  'auc': 0.5145118578669777},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.5802469135802468,\n",
+       "  'auc': 0.5193432142778548},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.5802469135802468,\n",
+       "  'auc': 0.5117302289415578},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.5802469135802468,\n",
+       "  'auc': 0.5217652193687051},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.5679012345679012,\n",
+       "  'auc': 0.5308143159995012},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.5679012345679012,\n",
+       "  'auc': 0.5331029980267453},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.5679012345679012,\n",
+       "  'auc': 0.5389202482339738},\n",
+       " {'num_examples': 81, 'accuracy': 0.5555555555555556, 'auc': 0.5369987089486},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.5555555555555556,\n",
+       "  'auc': 0.5311688049705479},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.5555555555555556,\n",
+       "  'auc': 0.5267045913015411},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.5432098765432098,\n",
+       "  'auc': 0.533887531817815},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.5432098765432098,\n",
+       "  'auc': 0.5276904850978925},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.5432098765432098,\n",
+       "  'auc': 0.5235356469561262},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.5432098765432098,\n",
+       "  'auc': 0.5149794972235059},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.5432098765432098,\n",
+       "  'auc': 0.516408089610704},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.5555555555555556,\n",
+       "  'auc': 0.5122532514689377},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.5432098765432098,\n",
+       "  'auc': 0.5089711567380413},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.5432098765432098,\n",
+       "  'auc': 0.5032041548381417},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.5432098765432098,\n",
+       "  'auc': 0.49303584134738815},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.5432098765432098,\n",
+       "  'auc': 0.49483157647645665},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.5308641975308641,\n",
+       "  'auc': 0.48838805630744625},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.5308641975308641,\n",
+       "  'auc': 0.4774803224694292},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.5308641975308641,\n",
+       "  'auc': 0.46812185031139275},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.5432098765432098,\n",
+       "  'auc': 0.46526980040051935},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.5555555555555556,\n",
+       "  'auc': 0.46545337177145457},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.5555555555555556,\n",
+       "  'auc': 0.45342642107347997},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.5432098765432098,\n",
+       "  'auc': 0.45522215620254836},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.5432098765432098,\n",
+       "  'auc': 0.4493922522244962},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.5432098765432098,\n",
+       "  'auc': 0.4447444671845543},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.5432098765432098,\n",
+       "  'auc': 0.4478429905445156},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.5432098765432098,\n",
+       "  'auc': 0.44499094063364214},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.5308641975308641,\n",
+       "  'auc': 0.4449909406336421},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.5185185185185185,\n",
+       "  'auc': 0.4421388907227687},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.5185185185185185,\n",
+       "  'auc': 0.434759725064736},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.5061728395061729,\n",
+       "  'auc': 0.4333940347556905},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.5061728395061729,\n",
+       "  'auc': 0.4260148690976578},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.49382716049382713,\n",
+       "  'auc': 0.421120610608628},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.49382716049382713,\n",
+       "  'auc': 0.4180220872486667},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.49382716049382713,\n",
+       "  'auc': 0.416719299017774},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.49382716049382713,\n",
+       "  'auc': 0.4154165107868812},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.49382716049382713,\n",
+       "  'auc': 0.4076073003088253},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.48148148148148145,\n",
+       "  'auc': 0.4107058236687866},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.48148148148148145,\n",
+       "  'auc': 0.4138043470287479},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.48148148148148145,\n",
+       "  'auc': 0.40599513655069214},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.4691358024691358,\n",
+       "  'auc': 0.4046923483197993},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.4691358024691358,\n",
+       "  'auc': 0.4046923483197993},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.4691358024691358,\n",
+       "  'auc': 0.39421465930180527},\n",
+       " {'num_examples': 81,\n",
+       "  'accuracy': 0.4691358024691358,\n",
+       "  'auc': 0.3964404392508968}]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "avg_evaluations"
    ]
@@ -539,7 +704,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "classification_experiment.save_model_weights(\"linear-attention.weights\")"
+   ]
   }
  ],
  "metadata": {
